[gd_scene load_steps=4 format=3 uid="uid://c6m51neioxrho"]

[ext_resource type="Script" path="res://controllers/scripts/options.gd" id="1_5wcy7"]

[sub_resource type="Theme" id="Theme_uldg2"]

[sub_resource type="ButtonGroup" id="ButtonGroup_1unrl"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wcy7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uldg2")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_1unrl")
item_count = 4
selected = 3
popup/item_0/text = "1024x546"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[node name="OptionButton2" type="OptionButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back"

[connection signal="item_selected" from="PanelContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
